<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.ui.shoes.ShoesViewModel" />
        <variable
            name="shoeDetailFrag"
            type="com.udacity.shoestore.ui.shoes.ShoeDetailFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.shoes.ShoeDetailFragment">

        <TextView
            android:id="@+id/shoe_detail_title"
            android:text="@string/details_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/titleStyle" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/ed_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.373"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="cursive"
            android:text="@string/shoe_name_label"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/divider" />

        <TextView
            android:id="@+id/company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="cursive"
            android:text="@string/company_label"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_label" />

        <TextView
            android:id="@+id/size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="cursive"
            android:text="@string/size_label"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/company_label" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="cursive"
            android:text="@string/description_label"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/size_label" />

        <EditText
            android:id="@+id/ed_shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="cursive"
            android:hint="@string/shoe_name_hint"
            android:inputType="textPersonName"
            android:text="@={viewModel.name}"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/divider" />

        <EditText
            android:id="@+id/ed_company_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="cursive"
            android:hint="@string/company_hint"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:text="@={viewModel.company}"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/divider" />

        <EditText
            android:id="@+id/ed_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:digits="0123456789"
            android:ems="10"
            android:fontFamily="cursive"
            android:hint="@string/size_hint"
            android:inputType="numberSigned"
            android:textSize="20sp"
            android:text="@={viewModel.size}"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/divider" />

        <EditText
            android:id="@+id/ed_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="cursive"
            android:gravity="start|top"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            android:text="@={viewModel.description}"
            app:layout_constraintBottom_toTopOf="@+id/divider3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/btn_cancel_label"
            android:onClick="@{()->shoeDetailFrag.onCancel()}"
            style="@style/buttonStyle.v2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/btn_save_label"
            android:onClick="@{()->shoeDetailFrag.onSave()}"
            style="@style/buttonStyle.v2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <View
            android:id="@+id/divider3"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="64dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>